Update env variables